Removed quotes from the "path" variable to easily configure multiple log files.

--- a/templates/logrotate.d.j2
+++ b/templates/logrotate.d.j2
@@ -1,6 +1,6 @@
 # {{ ansible_managed }}
 
-"{{ item.path }}" {
+{{ item.path }} {
   {% if item.options is defined -%}
   {% for option in item.options -%}
   {{ option }}
